--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 /*############################################
 ###############__Game-Board__#################
 ############################################*/
-
 #gameBoard{
   height:500px;
   width:500px;
+  /*margin:auto;*/
+  margin:auto;
+  margin-top:5rem;
+  margin-bottom:5rem;
 }
 
 .row{
@@ -17,4 +20,39 @@
   border: 2px solid #E1E1E1;
   border-radius: 5px;
   margin:auto;
+  text-align:center;
+  line-height:10rem;
+  font-size: 10rem;
+}
+
+
+/*############################################
+#################__Header__###################
+############################################*/
+
+#header{
+  height:150px;
+  border: 2px solid #E1E1E1;
+}
+
+#playerX{
+  float:left;
+  width:25%;
+  height:100%;
+  background-color:grey !important;
+}
+#game_status{
+  float:left;
+  width:49%;
+  height:100%;
+  background-color:lightgrey;
+  text-align: center;
+  font-size: 3rem;
+}
+
+#playerO{
+  float:right:
+  width:25%;
+  height:100%;
+  background-color:grey !important;
 }
