--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,7 @@
   height:100%;
   background-color:grey !important;
 }
+
+body {
+  background: url("images/halloween.jpg") center top no-repeat;
+}
